--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,6 +4,7 @@
       {{ 'COMMON.HOME' | translate }}
     </ion-title>
     <ion-buttons slot="end">
+      <app-messages-button></app-messages-button>
       <ion-button (click)="createNew()" fill="clear" class="new-button">
         <ion-icon name="add" slot="icon-only"></ion-icon>
       </ion-button>
