--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,12 +20,7 @@
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
 
-    @if (computedIsLoading()) {
-      <div class="loading-container">
-        <ion-spinner name="crescent"></ion-spinner>
-        <p>{{ 'COMMON.LOADING' | translate }}</p>
-      </div>
-    } @else if (projects().length === 0) {
+    @if (projects().length === 0) {
       <div class="empty-state">
         <ion-icon name="document-outline" size="large" color="medium"></ion-icon>
         <h2>{{ 'HOME.NO_PROJECTS' | translate }}</h2>
