--- a/src/app/components/global-spinner/global-spinner.component.scss
+++ b/src/app/components/global-spinner/global-spinner.component.scss
@@ -2,25 +2,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100vw;
-  height: 100vh;
-  min-width: 100vw;
-  min-height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100%;
   z-index: 9999;
 }
 
 .spinner-container {
   background-color: var(--ion-color-light);
-  padding: 2rem;
-  border-radius: 12px;
-  text-align: center;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
   width: 100%;
   height: 100%;
   display: flex;
@@ -35,7 +23,6 @@
   }
   
   p {
-    margin: 0;
     color: var(--ion-color-medium);
     font-size: 1rem;
   }
