--- a/src/app/components/global-spinner/global-spinner.component.scss
+++ b/src/app/components/global-spinner/global-spinner.component.scss
@@ -2,13 +2,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
+  background-color: var(--spinner-overlay-bg, rgba(0, 0, 0, 0.5));
   z-index: 9999;
 }
 
 .spinner-container {
-  background-color: var(--ion-color-light);
+  background-color: var(--spinner-container-bg, var(--ion-color-light));
   width: 100%;
   height: 100%;
   display: flex;
@@ -20,10 +21,12 @@
     width: 48px;
     height: 48px;
     margin-bottom: 1rem;
+    color: var(--spinner-color, var(--ion-color-primary));
   }
   
   p {
-    color: var(--ion-color-medium);
+    margin: 0;
+    color: var(--spinner-text-color, var(--ion-color-medium));
     font-size: 1rem;
   }
 }
