--- a/src/app/new-item/new-item.component.scss
+++ b/src/app/new-item/new-item.component.scss
@@ -1,6 +1,14 @@
 .new-item-form {
   padding: 16px;
   
+  ion-item {
+    --border-style: none;
+    --border-width: 0;
+    --border-color: transparent;
+    --inner-border-width: 0;
+    --detail-icon-color: transparent;
+  }
+  
   .form-card {
     margin: 0 0 16px 0;
     border-radius: 12px;
@@ -19,6 +27,9 @@
       --inner-padding-end: 0;
       --background: transparent;
       margin-bottom: 16px;
+      --border-style: none;
+      --border-width: 0;
+      --border-color: transparent;
       
       ion-label {
         font-weight: 600;
@@ -38,6 +49,8 @@
         margin-top: 8px;
         --background: transparent;
         color: var(--app-text);
+        --border-style: none;
+        --border-width: 0;
         
         &:focus-within {
           border: 1px solid var(--app-primary);
